# flake8-frozen-collections

./: README.md  Taskfile.yml  pyproject.toml
.github/workflows/: release.yml  test.yml
flake8_frozen_collections/: plugin.py
tests/fixtures/: file.py.txt
tests/it/: test_app.py
tests/unit/: test_plugin.py
